feat(Routes): Safety on the routes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <!--Styles-->
     <link rel="stylesheet" href="../src/style.css" />
-    <title>React App</title>
+    <title>EPAM Monitoring</title>
   </head>
   <body>
     <div id="root"></div>
